Added restraurants and all photos

--- a/src/pages/itinerario/days/day11.astro
+++ b/src/pages/itinerario/days/day11.astro
@@ -38,6 +38,9 @@ const day = dias[10]
                                                                         class="underline decoration-sky-500 font-bold">Akihabara</a>
                     con lo mas electronico
                 </p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696010770/japon-2weeks/bje37gfy7orfvy5xobsi.jpg">
+                <span class="text-center text-sm">Entrada al templo Sensoji, en Asakusa</span>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
@@ -54,6 +57,9 @@ const day = dias[10]
                                              class="underline decoration-sky-500 font-bold">Akihabara</a>, la
                     zona comercial mas famosa para buscar anime, manga y electronica
                 </p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696010770/japon-2weeks/t4ifksptzzueiuv9mjdj.jpg">
+                <span class="text-center text-sm">Akihabara, distrito electronico</span>
                 <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/TEBzGd2yM24Fb46J9"
                                              class="underline decoration-sky-500 font-bold">Tienda Mandarake en
                     Tokyo</a>, tienda de 5 pisos de manga, anime y coleccionismo.
