--- a/src/pages/itinerario/days/day13.astro
+++ b/src/pages/itinerario/days/day13.astro
@@ -42,6 +42,9 @@ const day = dias[12]
                                                              class="underline decoration-sky-500 font-bold">el
                     buda gigante</a> y haremos una ruta preciosa en tren por la
                     costa</p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696011153/japon-2weeks/shu5jjurt7qhd99ypsm3.jpg">
+                <span class="text-center text-sm">Buda gigante en Kotaku-in</span>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/m1FjekPsXdF37xxd8"
@@ -54,6 +57,9 @@ const day = dias[12]
                                                        class="underline decoration-sky-500 font-bold">Calle
                     comercial Komachi</a>, para comer algo o comprar algun
                     recuerdo.</p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696011153/japon-2weeks/jj7pg9kmgrjbatx9wthj.jpg">
+                <span class="text-center text-sm">Tren Enoden con playa de fondo</span>
                 <p class="text-lg font-bold mt-1">· Cojer el <a href="https://maps.app.goo.gl/PEApHTTJwGvzYN2q8"
                                                                 class="underline decoration-sky-500 font-bold">tren
                     Enoden</a>, disfrutando de un magnifico paseo por la
