--- a/src/pages/itinerario/days/day14.astro
+++ b/src/pages/itinerario/days/day14.astro
@@ -42,6 +42,9 @@ const day = dias[13]
                     libertad</a>, un <a href="https://maps.app.goo.gl/EA6Hc8d15FpHz9zM9"
                                         class="underline decoration-sky-500 font-bold">gundam gigante</a> y
                     cojeremos un tren sin conductor.</p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696011596/japon-2weeks/gltdvsfgikqdkds0qm3d.jpg">
+                <span class="text-center text-sm">Odaiba, la isla artificial</span>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/D1LsatUDXq9ZW5E78"
@@ -58,6 +61,9 @@ const day = dias[13]
                         class="underline decoration-sky-500 font-bold">Gundam
                     Unicorn</a> (se
                     mueve)</p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696011596/japon-2weeks/mksmbw04b59xirqglsqv.jpg">
+                <span class="text-center text-sm">Un gundam gigante</span>
                 <p class="text-lg font-bold mt-1">· Por la tarde tendremos hueco para volver a ir a algun sitio que nos
                     haya gustado.</p>
             </div>
