--- a/src/pages/itinerario/days/day16.astro
+++ b/src/pages/itinerario/days/day16.astro
@@ -34,6 +34,8 @@ const day = dias[15]
                 <p class="text-lg mt-1">
                     Ultimo dia de nuestra aventura, toca decir adios a Japon y nos volvemos a España con unas 16h de
                     vuelta aproximadamente.
+                    <img class="mt-2"
+                         src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696011595/japon-2weeks/p4pmas6sywjhpf8pkisj.jpg">
                 </p>
             </div>
         </div>
