--- a/src/pages/itinerario/days/day10.astro
+++ b/src/pages/itinerario/days/day10.astro
@@ -43,7 +43,9 @@ const day = dias[9]
                     escena de compras y entretenimiento, mientras que Shinjuku es un bullicioso distrito comercial y de
                     negocios conocido por sus rascacielos, vida nocturna y el tranquilo Parque Shinjuku Gyoen.
                 </p>
-
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696010499/japon-2weeks/yhi3px6vbif38tdbfnki.jpg">
+                <span class="text-center text-sm">Estatua de Hachiko, en Shibuya</span>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg font-bold mt-1">Lo genial de Tokyo es que no hay madrugar mucho, ya que es una ciudad
@@ -83,6 +85,9 @@ const day = dias[9]
                     <a href="https://maps.app.goo.gl/DHfdYUqy2TwYYDNp7" class="underline decoration-sky-500 font-bold">Omoide
                         Yococho</a>
                 </p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696010499/japon-2weeks/gyveap4xzftb4p8q5pgd.jpg">
+                <span class="text-center text-sm">Calles estrechas de Golden Gai</span>
                 <p class="text-lg mt-1">· Acabaremos visitando la zona con mas vida nocturna de la ciudad, <a
                         href="https://maps.app.goo.gl/fH1Pi5pbqmYFyeQi6"
                         class="underline decoration-sky-500 font-bold">Golden
