--- a/src/pages/itinerario/days/day12.astro
+++ b/src/pages/itinerario/days/day12.astro
@@ -39,6 +39,9 @@ const day = dias[11]
                         class="underline decoration-sky-500 font-bold">el
                     gran palacio imperial</a>.
                 </p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696010938/japon-2weeks/jubkup2puirulhhrpn0o.jpg">
+                <span class="text-center text-sm">Calle mas famosa de Ginza</span>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
