--- a/src/pages/itinerario/days/day15.astro
+++ b/src/pages/itinerario/days/day15.astro
@@ -43,6 +43,9 @@ const day = dias[14]
                 <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/DexB748omeKhmgwh8"
                                                        class="underline decoration-sky-500 font-bold">Tokyo Skytree</a>,
                     el segundo edificio mas alto del mundo</p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696011596/japon-2weeks/j78q84emnwywnhu6u527.jpg">
+                <span class="text-center text-sm">Segundo edificio mas grande del mundo</span>
                 <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/XVtJdo43cKzvTRea6"
                                                        class="underline decoration-sky-500 font-bold">Hie Shrine</a>,
                     un templo con paseo de toris muy bonito</p>
