--- a/src/pages/itinerario/days/day9.astro
+++ b/src/pages/itinerario/days/day9.astro
@@ -43,6 +43,9 @@ const day = dias[8]
                     jardines. Sus calles están llenas de vida las 24 horas del día, ofreciendo una experiencia única de
                     gastronomía, cultura pop y una vibrante vida nocturna.
                 </p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696010276/japon-2weeks/vgihuek3usk066na9tww.png">
+                <span class="text-center text-sm">Tokyo, capital de Japon</span>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">En este dia iremos a Tokyo, primero a nuestra base de operacion y
